Form and link actions in listings

--- a/src/assets/less/action-buttons.less
+++ b/src/assets/less/action-buttons.less
@@ -9,3 +9,15 @@
 form.fa {
   cursor: pointer;
 }
+
+form.form-actions {
+  display: inline-block;
+
+  button {
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+  }
+}
