--- a/src/assets/less/backoffice.less
+++ b/src/assets/less/backoffice.less
@@ -7,6 +7,8 @@
 @import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-wysihtml5.less";
 @import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-fileupload.min.less";
 @import (less) "../../../bower_components/multiselect/css/multi-select.css";
+@import (less) "../../../bower_components/select2/select2.css";
+@import (less) "../../../bower_components/select2/select2-bootstrap.css";
 @import "overrides.less";
 @import "pagination.less";
 @import "validation.less";
