Starting with bulk actions and pagination

--- a/src/assets/less/backoffice.less
+++ b/src/assets/less/backoffice.less
@@ -10,8 +10,8 @@
 @import (less) "../../../bower_components/select2/select2.css";
 @import (less) "../../../bower_components/select2/select2-bootstrap.css";
 @import "overrides.less";
-@import "pagination.less";
 @import "validation.less";
 @import "shouts.less";
 @import "action-buttons.less";
 @import "sort-buttons.less";
+@import "listing/main";
