--- a/src/assets/less/backoffice.less
+++ b/src/assets/less/backoffice.less
@@ -6,6 +6,7 @@
 @import "../../../vendor/digbang/backoffice-template/template/less/prettyPhoto.less";
 @import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-wysihtml5.less";
 @import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-fileupload.min.less";
+@import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-timepicker.min.less";
 @import (less) "../../../bower_components/multiselect/css/multi-select.css";
 @import (less) "../../../bower_components/select2/select2.css";
 @import (less) "../../../bower_components/select2/select2-bootstrap.css";
