Missing relationship filling in controller generation

--- a/src/Digbang/L4Backoffice/templates/controller.mustache
+++ b/src/Digbang/L4Backoffice/templates/controller.mustache
@@ -150,6 +150,9 @@ class {{ classData.name }}Controller extends Controller
 			{{# inputs }}
 			'{{ name }}' => $entity->{{ name }},
 			{{/ inputs }}
+			{{# dependencies }}
+			'{{ column }}' => $entity->{{ column }},
+			{{/ dependencies }}
 		]);
 
 		$breadcrumb = $this->backoffice->breadcrumb([
