Reworked how we load asset dependencies from the template to update FontAwesome to 4.2

--- a/src/assets/less/backoffice.less
+++ b/src/assets/less/backoffice.less
@@ -1,18 +1,7 @@
-@import "../../../vendor/digbang/backoffice-template/template/less/style.default.less";
-@import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-override.less";
-@import "../../../vendor/digbang/backoffice-template/template/less/jquery.datatables.less";
-@import "../../../vendor/digbang/backoffice-template/template/less/jquery.gritter.less";
-@import "../../../vendor/digbang/backoffice-template/template/less/jquery-ui-1.10.3.less";
-@import "../../../vendor/digbang/backoffice-template/template/less/prettyPhoto.less";
-@import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-wysihtml5.less";
-@import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-fileupload.min.less";
-@import "../../../vendor/digbang/backoffice-template/template/less/bootstrap-timepicker.min.less";
-@import (less) "../../../bower_components/multiselect/css/multi-select.css";
-@import (less) "../../../bower_components/select2/select2.css";
-@import (less) "../../../bower_components/select2/select2-bootstrap.css";
-@import "overrides.less";
-@import "validation.less";
-@import "shouts.less";
-@import "action-buttons.less";
-@import "sort-buttons.less";
+@import "dependencies";
+@import "overrides";
+@import "validation";
+@import "shouts";
+@import "action-buttons";
+@import "sort-buttons";
 @import "listing/main";
