Edit forms use the relationship to fill dropdown inputs

--- a/src/Digbang/L4Backoffice/templates/controller.mustache
+++ b/src/Digbang/L4Backoffice/templates/controller.mustache
@@ -175,7 +175,7 @@ class {{ classData.name }}Controller extends Controller
 			'{{ name }}' => $entity->{{ name }},
 			{{/ inputs }}
 			{{# dependencies }}
-			'{{ column }}' => $entity->{{ column }},
+			'{{ singular }}' => $entity->{{ singular }}->id,
 			{{/ dependencies }}
 		]);
 
