Improved dependency filter and form dropdowns

--- a/src/Digbang/L4Backoffice/templates/controller.mustache
+++ b/src/Digbang/L4Backoffice/templates/controller.mustache
@@ -254,8 +254,8 @@ class {{ classData.name }}Controller extends Controller
 		$inputs = $form->inputs();
 
 		{{# dependencies }}
-		${{ camelCase }} = array_merge([''], $this->{{ camelCase }}Repository->all()->lists('{{ titleGetter }}', 'id'));
-		$inputs->dropdown('{{ column }}', '{{ title }}', ${{ camelCase }});
+		${{ camelCase }} = array_merge(['' => ''], $this->{{ camelCase }}Repository->all()->lists('{{ titleGetter }}', 'id'));
+		$inputs->dropdown('{{ column }}', '{{ title }}', ${{ camelCase }}, ['placeholder' => '{{ title }}']);
 		{{/ dependencies }}
 		{{# inputs }}
 		$inputs->{{ type }}('{{ name }}', '{{ title }}');
@@ -278,8 +278,8 @@ class {{ classData.name }}Controller extends Controller
 
 		// And filter dependencies
 		{{# dependencies }}
-        ${{ camelCase }} = array_merge([''], $this->{{ camelCase }}Repository->all()->lists('{{ titleGetter }}', 'id'));
-        $filters->dropdown('{{ column }}', '{{ title }}', ${{ camelCase }});
+        ${{ camelCase }} = array_merge(['' => ''], $this->{{ camelCase }}Repository->all()->lists('{{ titleGetter }}', 'id'));
+        $filters->dropdown('{{ column }}', '{{ title }}', ${{ camelCase }}, ['placeholder' => '{{ title }}']);
 
         {{/ dependencies }}
 	}
