Revisited bulk actions

--- a/src/assets/less/listing/list-header.less
+++ b/src/assets/less/listing/list-header.less
@@ -2,6 +2,11 @@
   .actions-container {
     float: left;
     padding: 10px 0;
+
+    .actions {
+      float: left;
+      margin-right: 10px;
+    }
   }
 
   .pagination-container {
